; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_ctl.c_arenas_i.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_ctl.c_arenas_i.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64)* @arenas_i to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @arenas_i(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  store i64 %0, i64* %2, align 8
  %4 = call i32 (...) @tsd_fetch()
  %5 = load i64, i64* %2, align 8
  %6 = call i32* @arenas_i_impl(i32 %4, i64 %5, i32 1, i32 0)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp ne i32* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load i32*, i32** %3, align 8
  ret i32* %11
}

declare dso_local i32* @arenas_i_impl(i32, i64, i32, i32) #1

declare dso_local i32 @tsd_fetch(...) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
